syntax = "proto3";

package Medio.Proto.Messages;

// id = 1
message MoveRequest {
	string Id = 1;
	Pos Pos = 2;
}
message Pos {
	float X = 1;
	float Y = 2;
}
// id = 2
message EntityUpdatedState {
	int32 Points = 1;
	Pos Pos = 2;
	string Id = 3;
}
// id = 3
message PlayerData {
	string Id = 1;
	string Name = 2;
	Color Color = 4;
}
// id = 4
message FoodData {
	string Id = 1;
	Color Color = 2;
}
message Color {
	int32 R = 1;
	int32 G = 2;
	int32 B = 3;
}
// id = 5
message SpawnRequest {
	string Id = 1;
}
// id = 6
message ConnectResponse {
	string Id = 1;
	string SessionId = 2;
}
// id = 7
message ConnectToSessionRequest {
	string SessionId = 1;
	string Id = 2;
	PlayerData PlayerData = 3;
}
// id = 8
message ConnectToSessionResponse {
	int32 Count = 1;
	Rules Rules = 2;
}
message Rules {
	float Speed = 1;
    float SizeIncreaseCoefficient = 2;
    int32 GameLength = 3;
    int32 MaxPlayerSize = 4;
    int32 MinPlayerSize = 5;
    int32 MaxPlayerSpawnSize = 6;
    int32 MinEntitySpawnSize = 7;
    int32 MaxEntitySpawnSize = 8;
    float CanEatSizeDifference = 9;
    float MapWidth = 10;
    float MapHeight = 11;
    bool SpikesEnabled = 12;
    int32 SpikesCount = 13;
    int32 FoodCount = 14;
    bool FoodEnabled = 15;
	int32 MaxEntities = 16;
}
// id = 9
message HeartBeatMessage {
	string Id = 1;
}

// id = 10
message NewPlayerConnected {
	PlayerData playerData = 1;
}

// id 11
message MoveDeclined {
	Pos actualPos = 1;
	MoveErrorCode errorCode = 2;
	enum MoveErrorCode 
	{
		UNDEFINED = 0;
		NOT_A_PLAYER = 1;
		POS_NOT_IN_RANGE = 2;
	}
}

